2009-02-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avr910.c (avr910_read_byte_flash): Eliminate a static variable that
	hasn't been in use for 5 years.

2009-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Post-release 5.6.

2009-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Prepare for releasing version 5.6.

2009-02-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Ed Okerson:
	* jtagmkII.c (jtagmkII_read_byte): Fix signature reading of
	Xmega.

2009-02-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Mikael Hermansson:
	* avrdude.conf.in (ATxmega256A3): new device.
	* stk500v2 (stk500v2_initialize): Enable the AVRISPmkII as a
	PDI-capable device for ATxmega parts.

2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lars Immisch:
	patch #6750: Arduino support - new programmer-id
	* arduino.c: New file, inherits stk500.c.
	* arduino.h: New file.
	* Makefile.am: Add arduino.c and arduino.h.
	* config_gram.y: Add arduino keyword.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: (Ditto.)
	* avrdude.1: Document the new programmer type.
	* doc/avrdude.texi: (Ditto.)

2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Turn all non-const static data into instance data.

2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am: Move term.[ch] from the library into the CLI
	application section, as it is not useful for anything else but
	the CLI frontend.

2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega1284P): new device.

2009-02-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	More fixes for Solaris, including fixes for the Sunpro compiler:
	* avr.h: Remove stray semicolon.
	* configure.ac: Add check for predefined types uint_t and ulong_t.
	* confwin.c: Include "avrdude.h" on top to avoid empty translation
	unit warning.
	* ppwin.c: (Ditto.)
	* ser_win32.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* jtagmkII.c (jtagmkII_recv): remove unreachable "return".